<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker"
    style="@style/background_style"
    tools:context=".settings.ui.activity.SettingsFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_b"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="12dp"
        app:navigationIcon="@null"
        app:title="@string/settings"
        app:titleTextAppearance="@style/content" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/dark_theme_switch"
        style="@style/SettingsSwitchStyle"
        android:layout_marginTop="@dimen/main_marginTop"
        android:text="@string/dark_theme" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/icon_share"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/icon_support"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/terms_of_service"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/ic_arrow_forward_24"
        android:text="@string/arrow_forward" />


</LinearLayout>