<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:theme="@style/Base.Theme.PlaylistMaker"
    style="@style/background_style"
    tools:context=".search.ui.activity.SearchFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/back_b"
        app:navigationIcon="@null"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStartWithNavigation="16dp"
        app:title="@string/search"
        app:titleTextAppearance="@style/content" />

    <FrameLayout
        android:id="@+id/search_container"
        style="@style/SearchContainer">

        <ImageView
            android:id="@+id/searchIcon"
            style="@style/SearchIcon"
            android:src="@drawable/search_icon_16" />

        <EditText
            android:id="@+id/inputSearch"
            style="@style/SearchInput"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="36dp"
            android:autofillHints="@string/search"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/ClearIcon"
            android:src="@drawable/ic_clear_24"
            android:visibility="gone"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/history_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/history_title"
            android:text="@string/search_history"
            style="@style/HistoryTitle"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHistory"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/activity_track"
            style="@style/rvHistory"/>

        <Button
            android:id="@+id/clear_history_button"
            android:text="@string/clear_history"
            style="@style/ClearHistoryButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginBottom="258dp"
            android:indeterminateTint="@color/blue_surface"
            android:visibility="gone"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTrack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        tools:listitem="@layout/activity_track"/>

    <LinearLayout
        android:id="@+id/empty_results"
        style="@style/ViewStyle">

        <ImageView
            android:id="@+id/emptyResultsIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_no_results_120"/>

        <TextView
            android:id="@+id/emptyResultsText"
            android:text="@string/no_results"
            style="@style/EmptyStateText"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_view"
        style="@style/ViewStyle">

        <ImageView
            android:id="@+id/errorIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="120dp"
            android:src="@drawable/ic_error_120"/>

        <TextView
            android:id="@+id/errorText"
            android:layout_marginHorizontal="24dp"
            android:text="@string/server_error"
            style="@style/EmptyStateText"/>

        <Button
            android:id="@+id/refresh_button"
            style="@style/RefreshButtonStyle"
            android:text="@string/retry" />
    </LinearLayout>





</LinearLayout>