<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.PlaylistMaker">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back_arrow_24"
            app:title="@string/new_playlist"
            app:titleTextAppearance="@style/HeaderTextStyle"
            app:titleTextColor="?attr/colorPrimary" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/coverFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="312dp"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/rounded_red"
                    android:clickable="true"
                    android:focusable="true">


                    <ImageView
                        android:id="@+id/ivCover"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/playlist_cover"
                        android:visibility="gone" />


                    <ImageView
                        android:id="@+id/ivAddPhotoIcon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_photo_100"
                        android:contentDescription="@string/add_photo" />

                </FrameLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNameContainer"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/playlist_name_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tilName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilDescriptionContainer"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:hint="@string/playlist_description_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tilDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="56dp"
                        android:maxLines="3"
                        android:inputType="textCapSentences"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:textSize="16dp"
            android:inputType="text|textCapSentences"
            android:fontFamily="font/ys_display_medium"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/create"
            android:textColor="@color/white"
            app:backgroundTint="@color/grey" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>